--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <script src="/webjars/jquery/3.1.0/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/apimock.js"></script>
+    <script src="js/app.js"></script>
+
 </head>
 <body>
-    <h1>Hola mundo!</h1>
+    <script src="/js/app.js"></script>
+
+    <label for="Author">Find Author</label>
+    <input type="text" value="" placeholder="Author" id="inputFindAuthor">
+    <button type="button" id="btnFindAuthor">Find</button>
+    <table id="blueprintTable">
+        <tr>
+            <th>Blueprint Name</th>
+            <th>Number of points</th>
+        </tr>
+    </table>
+
+    <script> App.setAuthor("Álvaro"); App.setBlueprints([ {name: "Plano1", points: [1,2,3]}, {name: "Plano2", points: [4,5]} ]);
+    document.getElementById("btnFindAuthor").addEventListener("click", function() { const author = document.getElementById("inputFindAuthor").value; App.setAuthor(author);
+
+     App.setBlueprints([ {name: author + "_PlanoA", points: [1,2]}, {name: author + "_PlanoB", points: [3,4,5,6]} ]); }); </script>
 </body>
 </html>
