--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,26 +6,36 @@
     <title>Document</title>
     <script src="/webjars/jquery/3.1.0/jquery.min.js"></script>
     <script src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet"
+      href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script src="js/apimock.js"></script>
     <script src="js/app.js"></script>
+    <style>
+        #blueprintTable th, 
+        #blueprintTable td {
+            text-align: center;   
+            padding: 8px;         
+        }
+    </style>
 
 </head>
 <body>
-    <script src="/js/app.js"></script>
 
     <label for="Author">Find Author</label>
     <input type="text" value="" placeholder="Author" id="inputFindAuthor">
-    <button type="button" id="btnFindAuthor">Find</button>
+    <button type="button" id="btnFindAuthor" onclick="App.updateBlueprints($('#inputFindAuthor').val())">Find</button>
     <table id="blueprintTable">
         <tr>
             <th>Blueprint Name</th>
             <th>Number of points</th>
         </tr>
+        
+        <tr>
+        <td><strong>Total</strong></td>
+        <td></td>
+        </tr>
     </table>
+    <p>Total Points: <span id="totalPoints">0</span></p>
 
-    <script> App.setAuthor("Álvaro"); App.setBlueprints([ {name: "Plano1", points: [1,2,3]}, {name: "Plano2", points: [4,5]} ]);
-    document.getElementById("btnFindAuthor").addEventListener("click", function() { const author = document.getElementById("inputFindAuthor").value; App.setAuthor(author);
-
-     App.setBlueprints([ {name: author + "_PlanoA", points: [1,2]}, {name: author + "_PlanoB", points: [3,4,5,6]} ]); }); </script>
 </body>
 </html>
