Refactor code structure for improved readability and maintainability

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,6 +41,9 @@
     <p>Total Points: <span id="totalPoints">0</span></p>
     <p>Drawing: <span id="currentBlueprint">None</span></p>
     <canvas id="blueprintCanvas" width="500" height="400" style="border:1px solid #000; margin-top:15px;"></canvas>
+    <div style="margin-top:8px;">
+        <button id="btnSaveBlueprint" onclick="App.saveCurrentBlueprint()">Save Blueprint</button>
+    </div>
     
     
 
