Add functionality to create new blueprints and update saving logic

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,6 +43,7 @@
     <canvas id="blueprintCanvas" width="500" height="400" style="border:1px solid #000; margin-top:15px;"></canvas>
     <div style="margin-top:8px;">
         <button id="btnSaveBlueprint" onclick="App.saveCurrentBlueprint()">Save Blueprint</button>
+        <button id="btnCreateBlueprint" onclick="App.createNewBlueprint()">Create new blueprint</button>
     </div>
     
     
